--- a/index.html
+++ b/index.html
@@ -48,7 +48,68 @@
       <img src="/images/depression-dialysis-Jan2022.png" alt="">
     </section>
 
-    section.
+    <section class="banner-1">
+      <div class="container">
+        <img src="/images/3f386913c145845554ba325700e2de72.png" alt="">
+        <div class="text-content">
+          <p>In the game of life, where the end results
+            is Death, why to get stressed out in the simple
+            Trickery of Life. Go out and Explore the beauty and
+            excitement that the world has to offer. In this massive
+            universe there are uncountable Galaxies and millions of
+            planets and in this small planet of Earth living in the small
+            city of a country, we are just a small speck of dust in the ocean
+            of sand.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="quote-container container">
+      <div class="quote-box">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolor accusantium mollitia dolorem id aliquam.
+        </p>
+      </div>
+      <div class="quote-box">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolor accusantium mollitia dolorem id aliquam.
+        </p>
+      </div>
+      <div class="quote-box">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolor accusantium mollitia dolorem id aliquam.
+        </p>
+      </div>
+      <div class="quote-box">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolor accusantium mollitia dolorem id aliquam.
+        </p>
+      </div>
+      <div class="quote-box">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolor accusantium mollitia dolorem id aliquam.
+        </p>
+      </div>
+
+    </section>
+
+    <section class="banner-2 ">
+      <div class="container">
+        <div class="text-content">
+          <h2>Choose Your Hobby...</h2>
+          <p>Get read of depression by
+            following your passion/ hubbies</p>
+        </div>
+        <section class="card-section">
+          <div class="card-container">
+
+            <div class="card card-1">Music</div>
+
+            <div class="card card-2">Drawing</div>
+
+            <div class="card card-3">Dance</div>
+
+            <div class="card card-4">Cooking</div>
+          </div>
+          <p>Being idle is the biggest Misery</p>
+        </section>
+      </div>
+    </section>
 
   </main>
 
