--- a/index.html
+++ b/index.html
@@ -111,6 +111,29 @@
       </div>
     </section>
 
+    <section class="consulatancy-section container">
+      <div class="text-content">
+        <h2>Talk with the Experts
+          on the Zero Suicide Listserv</h2>
+        <p>Join the Zero Suicide Listserv, an email discussion
+          list for executives, providers, researchers, and
+          advocates dedicated to the mission of
+          safer suicide care.</p>
+        <a href="" class="btn">Learn more</a>
+      </div>
+      <img src="/images/c7f1d3b1ffddf6096acdca27f9e84462.png" alt="">
+    </section>
+
+    <section class="help-section">
+      <div class="container">
+        <h2>Share your Problem...</h2>
+        <form action="#">
+          <input type="text" placeholder="Write here..">
+          <button type="submit" class="btn">Share</button>
+        </form>
+      </div>
+    </section>
+
   </main>
 
   <footer></footer>
