--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Smiling Soul</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="main.js" defer></script>
+  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </head>
 
 <body>
@@ -134,9 +139,103 @@
       </div>
     </section>
 
+    <section class="slider container">
+      <div class="swiper slide-container">
+        <div class="slide-content">
+          <div class="card-wrapper swiper-wrapper">
+            <div class="swiper-card swiper-slide">
+              <p>
+                The lorem text the section that contains header with having open functionality. Lorem dolor
+                sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+            <div class="swiper-card swiper-slide">
+              <p>
+                The lorem text the section that contains header with having open functionality. Lorem dolor
+                sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+            <div class="swiper-card swiper-slide">
+              <p>
+                The lorem text the section that contains header with having open functionality. Lorem dolor
+                sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+            <div class="swiper-card swiper-slide">
+              <p>
+                The lorem text the section that contains header with having open functionality. Lorem dolor
+                sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+            <div class="swiper-card swiper-slide">
+              <p>
+                The lorem text the section that contains header with having open functionality. Lorem dolor
+                sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="swiper-button-next swiper-navBtn"></div>
+        <div class="swiper-button-prev swiper-navBtn"></div>
+        <div class="swiper-pagination"></div>
+      </div>
+
+    </section>
+
   </main>
 
-  <footer></footer>
+  <footer>
+    <div class="footer-wrapper container">
+      <section class="social-section">
+        <div class="logo">
+          <h1>Smiling <span>Soul</span></h1>
+        </div>
+
+        <p class="about-me">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate deleniti ab nostrum officia
+          necessitatibus! Quia facere ipsa voluptates ratione quam!
+        </p>
+
+        <ul class="social-media">
+          <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+          <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+          <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
+          <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+        </ul>
+
+      </section>
+      <section class="quick-links">
+        <h2 class="footer-heading">Quick Links</h2>
+        <ul>
+          <li><a href="">Futrue Plans</a></li>
+          <li><a href="">Holiday destinations</a></li>
+          <li><a href="">Space suits</a></li>
+          <li><a href="">Sonic rockets</a></li>
+          <li><a href="">Star dust</a></li>
+        </ul>
+      </section>
+      <section class="subscribe-section">
+        <h2 class="footer-heading">Subscribe Us</h2>
+        <p>Your email is safe with us <br>Feel free to send your suggestions..</p>
+        <form action="#">
+
+          <input type="text" name="name" placeholder="Enter your name">
+          <br>
+
+          <input type="email" name="email" placeholder="Enter email address">
+
+          <button class="btn" type="submit">Submit</button>
+
+        </form>
+      </section>
+    </div>
+    <section class="copyright-section container">
+      <p>Copyright C Smiling Soul</p>
+      <p>Cosmic Coders</p>
+    </section>
+  </footer>
 </body>
 
 </html>
