--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Smiling Soul</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
   <script src="main.js" defer></script>
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </head>
@@ -136,6 +136,56 @@
           <input type="text" placeholder="Write here..">
           <button type="submit" class="btn">Share</button>
         </form>
+      </div>
+    </section>
+
+    <section class="slider-section">
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
+              laborum
+              velit.</p>
+          </div>
+          <div class="swiper-slide">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
+              laborum
+              velit.</p>
+          </div>
+          <div class="swiper-slide">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
+              laborum
+              velit.</p>
+          </div>
+          <div class="swiper-slide">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
+              laborum
+              velit.</p>
+          </div>
+          <div class="swiper-slide">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
+              laborum
+              velit.</p>
+          </div>
+          <div class="swiper-slide">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
+              laborum
+              velit.</p>
+          </div>
+          <div class="swiper-slide">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
+              laborum
+              velit.</p>
+          </div>
+          <div class="swiper-slide">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
+              laborum
+              velit.</p>
+          </div>
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
       </div>
     </section>
 
