--- a/index.html
+++ b/index.html
@@ -140,53 +140,57 @@
     </section>
 
     <section class="slider-section">
+
       <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
-              laborum
-              velit.</p>
-          </div>
-          <div class="swiper-slide">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
-              laborum
-              velit.</p>
-          </div>
-          <div class="swiper-slide">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
-              laborum
-              velit.</p>
-          </div>
-          <div class="swiper-slide">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
-              laborum
-              velit.</p>
-          </div>
-          <div class="swiper-slide">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
-              laborum
-              velit.</p>
-          </div>
-          <div class="swiper-slide">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
-              laborum
-              velit.</p>
-          </div>
-          <div class="swiper-slide">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
-              laborum
-              velit.</p>
-          </div>
-          <div class="swiper-slide">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
-              laborum
-              velit.</p>
+        <div class="swipo">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
+                laborum
+                velit.</p>
+            </div>
+            <div class="swiper-slide">
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
+                laborum
+                velit.</p>
+            </div>
+            <div class="swiper-slide">
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
+                laborum
+                velit.</p>
+            </div>
+            <div class="swiper-slide">
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
+                laborum
+                velit.</p>
+            </div>
+            <div class="swiper-slide">
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
+                laborum
+                velit.</p>
+            </div>
+            <div class="swiper-slide">
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
+                laborum
+                velit.</p>
+            </div>
+            <div class="swiper-slide">
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
+                laborum
+                velit.</p>
+            </div>
+            <div class="swiper-slide">
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
+                laborum
+                velit.</p>
+            </div>
           </div>
         </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
         <div class="swiper-pagination"></div>
+        <div class="swiper-button-next"><i class="fa-solid fa-chevron-right"></i></div>
+        <div class="swiper-button-prev"><i class="fa-solid fa-chevron-left"></i></div>
       </div>
+
     </section>
 
 
