help section js added

--- a/index.html
+++ b/index.html
@@ -133,9 +133,18 @@
       <div class="container">
         <h2>Share your Problem...</h2>
         <form action="#">
-          <input type="text" placeholder="Write here..">
-          <button type="submit" class="btn">Share</button>
+          <input id="user-input" type="text" placeholder="Write here..">
+          <button type="submit" class="btn" id="submit-btn">Get Solution</button>
         </form>
+      </div>
+      <div class="popUp">
+        <div class="close-btn"><i class="fa-regular fa-rectangle-xmark"></i></div>
+        <h3>Your Problem statement: </h3>
+        <h4 class="user-problem"></h4><br>
+        <h3>Solutions:</h3>
+        <p class="solutions">
+
+        </p>
       </div>
     </section>
 
