--- a/index.html
+++ b/index.html
@@ -71,23 +71,24 @@
 
     <section class="quote-container container">
       <div class="quote-box">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolor accusantium mollitia dolorem id aliquam.
+        <p>If you are troubled by thoughts of suicide, speak up. Asking for help is an act of bravery that will change
+          your life for better.
         </p>
       </div>
       <div class="quote-box">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolor accusantium mollitia dolorem id aliquam.
+        <p>If the meaning of your life is lost, ask for help finding it.
         </p>
       </div>
       <div class="quote-box">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolor accusantium mollitia dolorem id aliquam.
+        <p>When you feel like you can't fight anymore, Don't give up. Just take some time to rest.
         </p>
       </div>
       <div class="quote-box">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolor accusantium mollitia dolorem id aliquam.
+        <p>When you feel like giving up, just remember tge reason why you held on for so long.
         </p>
       </div>
       <div class="quote-box">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolor accusantium mollitia dolorem id aliquam.
+        <p>Hope is a necessity for normal life ad the major weapon against the suicide impulse.
         </p>
       </div>
 
@@ -154,45 +155,20 @@
         <div class="swipo">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
-                laborum
-                velit.</p>
+              <p>If you are troubled by thoughts of suicide, speak up. Asking for help is an act of bravery that will
+                change
+                your life for better.</p>
             </div>
             <div class="swiper-slide">
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
-                laborum
-                velit.</p>
+              <p>When you feel like you can't fight anymore, Don't give up. Just take some time to rest.</p>
             </div>
             <div class="swiper-slide">
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
-                laborum
-                velit.</p>
+              <p>When you feel like giving up, just remember tge reason why you held on for so long.</p>
             </div>
             <div class="swiper-slide">
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
-                laborum
-                velit.</p>
+              <p>Hope is a necessity for normal life ad the major weapon against the suicide impulse.</p>
             </div>
-            <div class="swiper-slide">
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
-                laborum
-                velit.</p>
-            </div>
-            <div class="swiper-slide">
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
-                laborum
-                velit.</p>
-            </div>
-            <div class="swiper-slide">
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
-                laborum
-                velit.</p>
-            </div>
-            <div class="swiper-slide">
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi accusamus culpa mollitia
-                laborum
-                velit.</p>
-            </div>
+
           </div>
         </div>
         <div class="swiper-pagination"></div>
@@ -213,8 +189,10 @@
         </div>
 
         <p class="about-me">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate deleniti ab nostrum officia
-          necessitatibus! Quia facere ipsa voluptates ratione quam!
+          In the game of life, where the end results
+          is Death, why to get stressed out in the simple
+          Trickery of Life. Go out and Explore the beauty and
+          excitement that the world has to offer.
         </p>
 
         <ul class="social-media">
@@ -229,10 +207,10 @@
         <h2 class="footer-heading">Quick Links</h2>
         <ul>
           <li><a href="">Futrue Plans</a></li>
-          <li><a href="">Holiday destinations</a></li>
-          <li><a href="">Space suits</a></li>
-          <li><a href="">Sonic rockets</a></li>
-          <li><a href="">Star dust</a></li>
+          <li><a href="">Music recommendation</a></li>
+          <li><a href="">drawing to animated video</a></li>
+          <li><a href="">AI Voice</a></li>
+          <li><a href="">Expert Consulatancy</a></li>
         </ul>
       </section>
       <section class="subscribe-section">
@@ -251,7 +229,7 @@
       </section>
     </div>
     <section class="copyright-section container">
-      <p>Copyright C Smiling Soul</p>
+      <p>Copyright Ⓒ Smiling Soul</p>
       <p>Cosmic Coders</p>
     </section>
   </footer>
