buddies link linked

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           Sun has to set <br>
           in order to Rise Again </h1>
         <p>It’s always better to share your feelings...</p>
-        <a href="" class="btn">Let’s Meet</a>
+        <a href="/buddies.html" class="btn">Let’s Meet</a>
       </div>
       <img src="/images/depression-dialysis-Jan2022.png" alt="">
     </section>
