--- a/buddies.html
+++ b/buddies.html
@@ -11,9 +11,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
   <script src="main.js" defer></script>
-  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+
 </head>
 
 <body>
@@ -48,7 +47,7 @@
 
       <div class="profile-card-section">
         <div class="profile-card">
-          <img src="/images/1001725.jpg" alt="">
+          <img src="/images/Ava-F2.png" alt="">
           <div class="desc">
             <p class="name">Abhi mathewes</p>
             <p class="tagName">Education</p>
@@ -56,7 +55,7 @@
           </div>
         </div>
         <div class="profile-card">
-          <img src="/images/1001725.jpg" alt="">
+          <img src="/images/Ava-M1.png" alt="">
           <div class="desc">
             <p class="name">kenny sebastian</p>
             <p class="tagName">Money</p>
@@ -64,7 +63,7 @@
           </div>
         </div>
         <div class="profile-card">
-          <img src="/images/1001725.jpg" alt="">
+          <img src="/images/Ava-M2.png" alt="">
           <div class="desc">
             <p class="name">Zain Mallik</p>
             <p class="tagName">Inferiority Complex</p>
@@ -72,7 +71,7 @@
           </div>
         </div>
         <div class="profile-card">
-          <img src="/images/1001725.jpg" alt="">
+          <img src="/images/Ava-M3.png" alt="">
           <div class="desc">
             <p class="name">Stphen Strange</p>
             <p class="tagName">Money</p>
@@ -80,7 +79,7 @@
           </div>
         </div>
         <div class="profile-card">
-          <img src="/images/1001725.jpg" alt="">
+          <img src="/images/Ava-M4.png" alt="">
           <div class="desc">
             <p class="name">MC Parth</p>
             <p class="tagName">Relationship</p>
@@ -88,7 +87,7 @@
           </div>
         </div>
         <div class="profile-card">
-          <img src="/images/1001725.jpg" alt="">
+          <img src="/images/Ava-F1.png" alt="">
           <div class="desc">
             <p class="name">Harley quinn</p>
             <p class="tagName">Education</p>
@@ -96,7 +95,7 @@
           </div>
         </div>
         <div class="profile-card">
-          <img src="/images/1001725.jpg" alt="">
+          <img src="/images/Ava-F3.png" alt="">
           <div class="desc">
             <p class="name">Kristin daniel</p>
             <p class="tagName">Relationship</p>
