--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <section class="card-section">
           <div class="card-container">
 
-            <div class="card card-1">Music</div>
+            <a href="./music.html"><div class="card card-1">Music</div></a>
 
             <div class="card card-2">Drawing</div>
 
