--- a/music.html
+++ b/music.html
@@ -46,7 +46,7 @@
               <span data-year>2023</span>
             </p>
 
-            <p class="label-md artist" data-artist>No Spirit x Tonion</p>
+            <p class="label-md artist" data-artist>Lorem ipsum dolor sit amet.</p>
 
             <div class="seek-control">
 
