The Yoga Page Added

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <div class="card card-3">Dance</div>
 
-            <div class="card card-4">Cooking</div>
+            <div class="card card-4"><a href="./yoga.html">Yoga</a></div>
           </div>
           <p>Being idle is the biggest Misery</p>
         </section>
