Music And Yoga Added

--- a/music.html
+++ b/music.html
@@ -21,10 +21,6 @@
 
 <body>
 
-
-
-
-
   <main>
     <article>
 
@@ -120,6 +116,7 @@
     </article>
   </main>
   <script src="./assets/js/script.js"></script>
+  <script src="./main.js"></script>
 
 </body>
 
