--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="container">
         <div class="text-content">
           <h2>Choose Your Hobby...</h2>
-          <p>Get read of depression by
+          <p>Get rid of depression by
             following your passion/ hubbies</p>
         </div>
         <section class="card-section">
